# SuperNEMO-DeadCellsModule

./: .gitignore  CMakeLists.txt  DeadCellsModule.conf.in  DeadCellsModule.cpp  DeadCellsModule.h  FLSimulateArgs.cc  README.md  official-2.0.0.conf  official-2.0.0_from_CAT.conf  official-2.0.0_only_calibration.conf  test-output.brio  testmodule.conf.in  testmodule.cpp  testmodule.h
scripts/: DeadCellsModule.conf.in  Makefile  README  efficiency.cpp  plot_efficiency.py  process.sh  process_one.sh
